[BlackBerry] ASSERT in StyleResolver::ensureScopeResolver() https://bugs.webkit.org/show_bug.cgi?id=114615

Patch by Xan Lopez <xlopez@igalia.com> on 2013-04-15
Reviewed by Carlos Garcia Campos.

Source/WebKit/blackberry:

Add a method to enable the style scoped feature to our
DumpRenderTreeSupport class.

* WebKitSupport/DumpRenderTreeSupport.cpp:
(DumpRenderTreeSupport::setStyleScopedEnabled):
* WebKitSupport/DumpRenderTreeSupport.h:
(DumpRenderTreeSupport):

Tools:

Enable the style scoped feature if we have support for it.

* DumpRenderTree/blackberry/DumpRenderTree.cpp:
(BlackBerry::WebKit::DumpRenderTree::resetToConsistentStateBeforeTesting):

Canonical link: https://commits.webkit.org/132990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148427 268f45cc-cd09-0410-ab3c-d52691b4dbfc