Source/WebKit/blackberry/WebKitSupport/DumpRenderTreeSupport.h
@@ -58,6 +58,9 @@ public:
     static void setMockGeolocationPosition(BlackBerry::WebKit::WebPage*, double latitude, double longitude, double accuracy, bool providesAltitude, double altitude, bool providesAltitudeAccuracy, double altitudeAccuracy, bool providesHeading, double heading, bool providesSpeed, double speed);
     static void setMockDeviceOrientation(BlackBerry::WebKit::WebPage*, bool canProvideAlpha, double alpha, bool canProvideBeta, double beta, bool canProvideGamma, double gamma);
     static void scalePageBy(BlackBerry::WebKit::WebPage*, float, float, float);
+#if ENABLE(STYLE_SCOPED)
+    static void setStyleScopedEnabled(bool);
+#endif
 
 private:
     static bool s_linksIncludedInTabChain;
